--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.55);
+		color: rgba(255, 255, 255, 0.863);
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -3289,7 +3289,40 @@ input, select, textarea {
 				}
 
 			}
-
+			#inner1{
+				padding-top: 0.5em;
+			}
+			/* .wrapper > .inner1 {
+				padding: 5em 5em 3em 7em ;
+				max-width: 100%;
+				width: 75em;
+			}
+	
+				@media screen and (max-width: 1680px) {
+	
+					.wrapper > .inner1 {
+						padding: 4em 4em 2em 13em ;
+					}
+	
+				}
+	
+				@media screen and (max-width: 1280px) {
+	
+					.wrapper > .inner1 {
+						width: 100%;
+						padding: 4em 4em 2em 5em ;
+					}
+	
+				}
+	
+				@media screen and (max-width: 736px) {
+	
+					.wrapper > .inner1 {
+						padding: 3em 2em 1em 3em ;
+					}
+	
+				} */
+	
 		.wrapper.alt {
 			background-color: #261c3e;
 		}
