--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4030,8 +4030,8 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/c.jpg");
-		filter: grayscale(100%);
+		background-image: url("images/bk1.jpg");
+		/* filter: grayscale(100%); */
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
